--- a/.github/workflows/build-and-deploy-to-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-to-gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force # Output files are force-pushed to gh-pages branch
       
   deploy-gh-pages-branch-to-azure:
