--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,8 @@ nav:
     - 'development/manual-setup.md'
     - 'development/code-style.md'
     - 'development/rcpch-audit-engine-design.md'
+    - 'development/database.md'
+    - 'development/design-decisions.md'
   - Legal:
     - 'legal/legal.md'
     - 'legal/license.md'
